# ableton-mcp

./: .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/: copilot-instructions.md
AbletonMCP_Remote_Script/: __init__.py
AbletonMCP_Remote_Script/core/: README.md  __init__.py  client.py  main.py  server.py
AbletonMCP_Remote_Script/handlers/: __init__.py  browser_handlers.py  clip_handlers.py  playback_handlers.py  session_handlers.py
AbletonMCP_Remote_Script/utils/: __init__.py  base_handler.py  error_handling.py  logging.py  validation.py
MCP_Server/: __init__.py  server.py
MCP_Server/core/: __init__.py  connection.py
MCP_Server/models/: __init__.py  ableton_models.py  config.py  exceptions.py
MCP_Server/tools/: __init__.py  browser_tools.py  clip_tools.py  playback_tools.py  session_tools.py
MCP_Server/utils/: __init__.py  logging.py  validation.py
prompts/: .eslintrc.js  .eslintrc.json  .gitignore  README.md  package.json  pnpm-lock.yaml  setup.sh  tsconfig.json
prompts/config/: profiles.json  repomix.config.json
prompts/scripts/: cleanup.ts  generate.ts
prompts/scripts/partials/: cli-setup.ts  config-manager.ts  file-generator.ts  file-lister.ts  size-estimator.ts  utils.ts
prompts/types/: index.ts
